--- a/src/components/Landingpage/Landingpage.css
+++ b/src/components/Landingpage/Landingpage.css
@@ -1,7 +1,15 @@
-body {
+.page {
   background-image: url("adult-aged-baby-226616.jpg");
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   background-size: 100%;
+  height: 100vh;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .main {
@@ -16,14 +24,17 @@ body {
   transform: translate(-50%, -50%);
   border: 2px solid #ffffff;
   /* box-shadow: 0 0 0 8px #ff0030; */
-  font-family: "Open Sans", sans-serif;
+  font-family: "Kaushan Script", cursive;
+  font-size: 40px;
   color: white;
   box-shadow: 10px 610px 50px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
   line-height: 1;
   border-radius: 20px;
   display: flex;
-  align-content: space-around;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
   position: absolute;
   -webkit-transition: background-color 2s ease-out;
   -moz-transition: background-color 2s ease-out;
@@ -36,8 +47,26 @@ body {
   cursor: pointer;
 }
 
+body {
+  background: linear-gradient(
+    to bottom right,
+    rgba(183, 195, 221, 0.767),
+    white
+  );
+}
+
 .logo {
   /* display: flex;
   justify-content: center;
   align-content: center; */
+}
+
+.title {
+  margin: 20px;
+}
+
+@media (max-width: 900px) {
+  .page {
+    background-image: none;
+  }
 }
