--- a/src/components/Family/Family.css
+++ b/src/components/Family/Family.css
@@ -25,6 +25,7 @@
   padding: 30 30 110px;
   font-weight: 700;
   font-size: 20px;
+  font-family: "Raleway", sans-serif;
   color: rgb(45, 84, 116);
   line-height: 1.5;
 }
@@ -36,6 +37,7 @@
   left: 0;
   line-height: 0.75;
   color: rgb(82, 81, 81);
+  font-family: "Raleway", sans-serif;
 }
 
 .name {
@@ -53,25 +55,29 @@
 
 button {
   display: flex;
-  font-size: 1rem;
-  background: rgb(57, 73, 145);
-  border: 1px solid rgb(52, 58, 133);
+  font-size: 17px;
+  background: radial-gradient(
+    circle,
+    rgb(224, 224, 224) 0%,
+    rgb(255, 255, 255) 100%
+  );
+  border: 2px solid rgb(105, 109, 116);
   border-radius: 10px;
-  padding: 0.75rem 1rem;
-  color: white;
+  padding: 10px;
+  color: rgb(125, 130, 136);
   text-decoration: none;
-  font-weight: 700;
+  /* font-weight: 700; */
   text-align: center;
   justify-content: space-between;
   float: left;
-  margin-left: 10px;
-  margin-bottom: 10px;
+  font-family: "Raleway", sans-serif;
+  /* margin-left: 10px;
+  margin-bottom: 10px; */
 }
 
-.button:hover,
-.button:focus {
-  background: darken(rgb(145, 57, 145), 10%);
-  border: 1px solid darken(rgb(145, 57, 145), 10%);
+button:hover {
+  box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.2);
+  font-size: 20px;
 }
 
 casemgr {
