--- a/src/components/CaseNote/CaseNote.css
+++ b/src/components/CaseNote/CaseNote.css
@@ -2,17 +2,31 @@
   flex: 1 1 50%;
   position: relative;
   border: 1px solid #efefef;
-  font-family: "Open Sans", sans-serif;
-  box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.1);
+  font-family: "Raleway", sans-serif;
+  box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.308);
   transition: all 0.3s ease;
+  border-radius: 5px;
   display: inline-block;
   line-height: 3%;
   height: 150px;
   width: 90%;
-  background-color: slategrey;
+  background-color: rgb(135, 135, 136);
   margin: 10px;
+  color: white;
 }
 
 casenote {
   box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.2);
+}
+
+.note {
+  margin-left: 10px;
+}
+
+.info {
+  padding: 20px;
+}
+
+.button {
+  margin-left: 10px;
 }
