--- a/src/components/FamilyScreens/CompleteFamily/CompleteFamily.css
+++ b/src/components/FamilyScreens/CompleteFamily/CompleteFamily.css
@@ -1,35 +1,60 @@
 .fammember {
-  height: 40vh;
+  /* height: 55vh; */
   width: 95%;
-  background-color: whitesmoke;
-  overflow: scroll;
-  margin: auto;
+  margin-left: 2%;
+  background-color: none;
+  overflow-x: scroll;
+  overflow-y: hidden;
+  white-space: nowrap;
+  /* box-shadow: rgba(84, 95, 121, 0.32) 0px 1px 15px 0px; */
 }
 
 .casenotebox {
   height: 25vh;
   width: 95%;
-  background-color: whitesmoke;
+  background-color: none;
   margin: auto;
   overflow: scroll;
+  overflow-x: hidden;
 }
 
 .familytools {
-  display: flex;
-  justify-content: right;
+  /* display: flex;
+  justify-content: right; */
   background: linear-gradient(
     to bottom right,
     rgba(150, 162, 190, 0.767),
     rgba(94, 110, 143, 0.767)
   );
+  box-shadow: rgba(84, 95, 121, 0.32) 0px 1px 15px 0px;
   height: 7vh;
   width: 100%;
-  padding-left: 5%;
   padding-top: 5px;
+  padding-left: 5%;
+  box-sizing: border-box;
+}
+
+.person-icon {
+  font-family: "Material Icons";
+  font-weight: normal;
+  font-style: normal;
+  font-size: 45px; /* Preferred icon size */
+  color: white;
+  display: inline-block;
+  line-height: 1;
+  margin-right: 30px;
+  /* text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr; */
+}
+
+.person-icon:hover {
+  text-decoration: underline;
 }
 
 .addfam {
-  font-family: "Open Sans", sans-serif;
   color: rgb(69, 112, 148);
   justify-content: center;
 }
@@ -39,4 +64,15 @@
   align-self: center;
   justify-content: center;
   font-size: 200%;
+  font-family: "Raleway", sans-serif;
+  color: rgb(95, 95, 95);
+}
+
+@media (max-width: 400px) {
+  .fammember {
+    height: 75vh;
+  }
+  .familytools {
+    height: 8vh;
+  }
 }
