--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -2,24 +2,35 @@
   background-color: rgba(183, 195, 221, 0.767);
   color: white;
   /* border: 1px solid #e2dada; */
-  height: 13vh;
-  /* width: 100vw; */
-  /* padding-left: 5%; */
+  height: 10vh;
+  width: 100%;
+  padding-left: 5%;
+  padding-right: 5%;
+  box-sizing: border-box;
   display: flex;
-  align-content: flex-start;
-  font-family: "Kaushan Script", cursive;
+  align-items: center;
+  justify-content: space-between;
+  font-family: "Homemade Apple", cursive;
+  box-shadow: rgba(25, 78, 192, 0.32) 0px 1px 15px 0px;
 }
 
 .title {
-  margin-top: 3%;
+  margin-top: auto;
   letter-spacing: 1px;
   font-size: 30px;
+  text-decoration: none;
+}
+
+.title:visited {
+  color: white;
 }
 
 .menu-button {
-  position: absolute;
+  /* position: relative;
   right: 5%;
-  top: 4%;
+  top: 4%; */
+  width: 45px;
+  height: 45px;
   color: white;
   display: flex;
   justify-content: space-between;
@@ -27,6 +38,11 @@
 
 famlogo {
   margin: 10px;
+}
+
+.button-wrap {
+  height: 45px;
+  width: 45px;
 }
 
 .material-icons {
@@ -37,7 +53,8 @@ famlogo {
   color: white;
   display: inline-block;
   line-height: 1;
-  margin-right: 30px;
+  padding-right: 5px;
+  /* margin-right: 30px; */
   /* text-transform: none;
   letter-spacing: normal;
   word-wrap: normal;
@@ -45,15 +62,28 @@ famlogo {
   direction: ltr; */
 }
 
-@media (max-width: 400px) {
+.material-icons:hover {
+  text-decoration: underline;
+}
+
+@media (max-width: 415px) {
+  .header {
+    padding: 1px;
+    box-sizing: border-box;
+    display: flex;
+    justify-content: center;
+  }
   .title {
-    display: none;
+    font-size: 20px;
+    margin-right: 20px;
   }
   .header {
-    background-color: steelblue;
+    background-color: rgba(183, 195, 221, 0.767);
+    height: 10vh;
+    margin-top: 3px;
   }
   .menu-button {
-    position: fixed;
-    justify-content: center;
+    display: flex;
+    justify-content: space-between;
   }
 }
