--- a/src/components/Landingpage/Landingpage.css
+++ b/src/components/Landingpage/Landingpage.css
@@ -24,10 +24,10 @@
   transform: translate(-50%, -50%);
   border: 2px solid #ffffff;
   /* box-shadow: 0 0 0 8px #ff0030; */
-  font-family: "Kaushan Script", cursive;
-  font-size: 40px;
+  font-family: "Homemade Apple", cursive;
+  font-size: 60px;
   color: white;
-  box-shadow: 10px 610px 50px rgba(0, 0, 0, 0.1);
+  box-shadow: 10px 10px 50px rgba(0, 0, 0, 0.664);
   transition: all 0.3s ease;
   line-height: 1;
   border-radius: 20px;
@@ -43,7 +43,7 @@
 }
 
 .main:hover {
-  background-color: rgb(162, 81, 165);
+  background-color: rgb(183, 195, 221);
   cursor: pointer;
 }
 
@@ -63,6 +63,7 @@ body {
 
 .title {
   margin: 20px;
+  text-shadow: rgba(84, 95, 121, 0.32) 0px 1px 15px 0px;
 }
 
 @media (max-width: 900px) {
