--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -93,10 +93,13 @@ h1 {
 }
 
 .clock {
-  color: rgba(108, 117, 138, 0.767);
+  color: rgba(255, 255, 255, 0);
+  background-color: rgba(108, 117, 138, 0.767);
   font-family: "Raleway", sans-serif;
   font-size: 5.5vw;
-  text-shadow: 4px 4px #ffffff6c;
+  text-shadow: 5px 5px #ffffff6c;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   align-self: center;
   margin: auto;
 }
@@ -104,7 +107,7 @@ h1 {
 .autodate {
   color: rgba(108, 117, 138, 0.767);
   font-family: "Raleway", sans-serif;
-  font-size: 2.7vw;
+  font-size: 2vw;
   text-shadow: 2px 2px #ffffff6c;
   text-align: center;
   margin: auto;
@@ -122,7 +125,7 @@ h1 {
 .advice {
   color: rgb(0, 0, 0);
   font-family: "Nothing You Could Do", cursive;
-  font-size: 3vw;
+  font-size: 2vw;
   color: rgba(78, 85, 102, 0.767);
   text-shadow: 2px 2px #ffffffd2;
   margin: auto;
