--- a/src/components/Family/Family.css
+++ b/src/components/Family/Family.css
@@ -1,7 +1,7 @@
 .family {
   flex: 50%;
-  border: 1px solid #efefef;
-  background-color: gainsboro;
+  border: 1px solid #bbbbbb;
+  background-color: rgba(220, 220, 220, 0.76);
   font-family: "Open Sans", sans-serif;
   box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
@@ -14,6 +14,7 @@
   border-radius: 10px;
   box-sizing: border-box;
   padding: 10px;
+  margin-bottom: 10px;
   /* margin: 10px; */
 }
 
@@ -42,6 +43,7 @@
 
 .name {
   margin: 0;
+  color: rgba(65, 76, 99, 0.767);
 }
 
 .card p {
@@ -56,15 +58,18 @@
 button {
   display: flex;
   font-size: 17px;
-  background: radial-gradient(
+  /* background: radial-gradient(
     circle,
     rgb(224, 224, 224) 0%,
     rgb(255, 255, 255) 100%
-  );
-  border: 2px solid rgb(105, 109, 116);
-  border-radius: 10px;
+  ); */
+  background: transparent;
+  /* border: 2px solid rgb(105, 109, 116); */
+  border: 2px solid white;
+  border-radius: 5px;
   padding: 10px;
-  color: rgb(125, 130, 136);
+  /* color: rgb(125, 130, 136); */
+  color: white;
   text-decoration: none;
   /* font-weight: 700; */
   text-align: center;
@@ -73,11 +78,16 @@ button {
   font-family: "Raleway", sans-serif;
   /* margin-left: 10px;
   margin-bottom: 10px; */
+  transition: all ease 0.5s;
+  margin-right: 5px;
 }
 
 button:hover {
   box-shadow: 2px 6px 30px rgba(0, 0, 0, 0.2);
   font-size: 20px;
+  background: white;
+  color: rgb(82, 81, 81);
+  border-color: rgb(104, 104, 104);
 }
 
 casemgr {
