--- a/src/components/FamilyScreens/CompleteFamily/CompleteFamily.css
+++ b/src/components/FamilyScreens/CompleteFamily/CompleteFamily.css
@@ -1,7 +1,23 @@
+.memberdiv {
+  display: flex;
+  justify-content: space-around;
+  height: 75vh;
+}
+
+.conren {
+  font-family: "Raleway", sans-serif;
+  color: white;
+  font-size: 1.5rem;
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+}
+
 .fammember {
   /* height: 55vh; */
-  width: 95%;
+  width: 100%;
   margin-left: 2%;
+  margin-top: 2%;
   background-color: none;
   overflow-x: scroll;
   overflow-y: hidden;
@@ -9,13 +25,39 @@
   /* box-shadow: rgba(84, 95, 121, 0.32) 0px 1px 15px 0px; */
 }
 
-.casenotebox {
-  height: 25vh;
-  width: 95%;
+.titles {
+  width: 100%;
+  display: flex;
+  align-self: center;
+  justify-content: space-around;
+  font-size: 200%;
+  font-family: "Raleway", sans-serif;
+  color: rgb(255, 255, 255);
+  text-shadow: 2px 2px #3f393949;
+  padding: 5px;
+}
+
+.goals {
+  width: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+  height: 75vh;
+  margin-left: 3%;
+}
+
+.casebox {
+  height: 75vh;
+  width: 95vw;
   background-color: none;
   margin: auto;
   overflow: scroll;
   overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+}
+
+.casenotebox {
+  width: 95vw;
 }
 
 .familytools {
@@ -65,12 +107,19 @@
   justify-content: center;
   font-size: 200%;
   font-family: "Raleway", sans-serif;
-  color: rgb(95, 95, 95);
+  color: rgb(152, 161, 170);
+  text-shadow: 2px 2px #3833338a;
+}
+
+.tabs > div {
+  background-color: rgba(69, 112, 148, 0) !important;
+  color: rgb(0, 139, 253) !important;
 }
 
 @media (max-width: 400px) {
   .fammember {
     height: 75vh;
+    width: 95vw;
   }
   .familytools {
     height: 8vh;
