--- a/src/components/FamilyScreens/Screen5/Screen5.css
+++ b/src/components/FamilyScreens/Screen5/Screen5.css
@@ -2,7 +2,7 @@
   height: 50vh;
   width: 90%;
   background-color: rgb(255, 255, 255);
-  margin-top: 10%;
+  margin-top: 6%;
   margin-left: 2%;
   padding: 25px;
   border: 1px solid #efefef;
@@ -10,4 +10,23 @@
   box-shadow: 2px 6px 25px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
   line-height: 10;
+}
+
+.noteheader {
+  display: flex;
+  justify-content: center;
+  font-family: "Homemade Apple", cursive;
+  font-size: 20px;
+  color: white;
+  background: linear-gradient(
+    to bottom right,
+    rgba(150, 162, 190, 0.767),
+    rgba(94, 110, 143, 0.767)
+  );
+  box-shadow: rgba(84, 95, 121, 0.32) 0px 1px 15px 0px;
+  height: 7vh;
+  width: 100%;
+  padding-top: 8px;
+  /* padding-left: 5%; */
+  box-sizing: border-box;
 }
