--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -40,11 +40,6 @@ famlogo {
   margin: 10px;
 }
 
-.button-wrap {
-  height: 45px;
-  width: 45px;
-}
-
 .material-icons {
   font-family: "Material Icons";
   font-weight: normal;
@@ -75,15 +70,18 @@ famlogo {
   }
   .title {
     font-size: 20px;
-    margin-right: 20px;
+    margin-right: 40px;
+    margin-top: 6%;
   }
   .header {
     background-color: rgba(183, 195, 221, 0.767);
     height: 10vh;
     margin-top: 3px;
+    display: fixed;
+    justify-content: flex-start;
   }
   .menu-button {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-start;
   }
 }
